--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,8 +129,8 @@ build-wagtail-stage:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      variables:
+    # - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    #   variables:
         IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
     - if: $CI_COMMIT_TAG
       variables:
@@ -147,9 +147,9 @@ deploy-stage:
   stage: deploy
   image: alpine/helm:3.9.1
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      variables:
-        IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
+    # - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    #   variables:
+    #     IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
     - if: $CI_COMMIT_TAG
       variables:
         IMAGE_TAG: $CI_COMMIT_TAG 
@@ -177,9 +177,9 @@ deploy-production:
   stage: deploy
   image: alpine/helm:3.9.1
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      variables:
-        IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
+    # - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    #   variables:
+    #     IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
     - if: $CI_COMMIT_TAG
       variables:
         IMAGE_TAG: $CI_COMMIT_TAG 
