--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -131,7 +131,7 @@ build-wagtail-stage:
   rules:
     # - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     #   variables:
-        IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
+    #    IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
     - if: $CI_COMMIT_TAG
       variables:
         IMAGE_TAG: $CI_COMMIT_TAG   
