--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ stages:
 #     key: "${CI_JOB_NAME}"
 #     paths:
 #       - .sonar/cache
+#   rules:
+#     - if: $CI_PIPELINE_SOURCE == 'merge_request_event' 
 #   script:
 #     - sonar-scanner
 #   allow_failure: true
@@ -31,6 +33,8 @@ build-wagtail-check:
   image:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' 
   script:
     - >-
       /kaniko/executor
@@ -163,9 +167,9 @@ health-wagtail-stage:
   stage: test
   image: wbitt/network-multitool
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-      variables:
-        IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
+    # - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    #   variables:
+    #     IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
     - if: $CI_COMMIT_TAG
       variables:
         IMAGE_TAG: $CI_COMMIT_TAG 
