--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,31 +3,31 @@ workflow:
   ##   - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 stages:
-#  - sonar-scan
+  - sonar-scan
   - build
   - deploy
   - test
   - deploy-prod
 
-#   sonar-scan-merge:
-#   stage: sonar-scan
-#   tags:
-# #    - docker
-#   image:
-#     name: sonarsource/sonar-scanner-cli:latest
-#     entrypoint: [""]
-#   variables:
-#     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-#     GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-#   cache:
-#     key: "${CI_JOB_NAME}"
-#     paths:
-#       - .sonar/cache
-#   rules:
-#     - if: $CI_PIPELINE_SOURCE == 'merge_request_event' 
-#   script:
-#     - sonar-scanner
-#   allow_failure: true
+  sonar-scan-merge:
+  stage: sonar-scan
+  tags:
+#    - docker
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' 
+  script:
+    - sonar-scanner
+  allow_failure: true
 
 build-wagtail-check:
   stage: build
@@ -43,27 +43,27 @@ build-wagtail-check:
       --dockerfile "application/mysite/Dockerfile"
       --no-push 
       
-# sonar-scan-dev:
-#   stage: sonar-scan
-#   tags:
-# #    - docker
-#   image:
-#     name: sonarsource/sonar-scanner-cli:latest
-#     entrypoint: [""]
-#   variables:
-#     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-#     GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-#   cache:
-#     key: "${CI_JOB_NAME}"
-#     paths:
-#       - .sonar/cache
-#   rules:
-#     - if: $CI_COMMIT_REF_NAME == "main"
-#       variables:
-#         IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"     
-#   script:
-#     - sonar-scanner
-#   allow_failure: true
+sonar-scan-dev:
+  stage: sonar-scan
+  tags:
+#    - docker
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  rules:
+    - if: $CI_COMMIT_REF_NAME == "main"
+      variables:
+        IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"     
+  script:
+    - sonar-scanner
+  allow_failure: true
 
 build-wagtail-dev:
   stage: build
@@ -102,30 +102,30 @@ health-wagtail-dev:
   script:
     - nslookup dev.prtest.tech
       
-# sonar-scan-stage:
-#   stage: sonar-scan
-#   tags:
-# #    - docker
-#   image:
-#     name: sonarsource/sonar-scanner-cli:latest
-#     entrypoint: [""]
-#   variables:
-#     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-#     GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-#   cache:
-#     key: "${CI_JOB_NAME}"
-#     paths:
-#       - .sonar/cache
-#   rules:
-#     - if: $CI_COMMIT_REF_NAME == "main"
-#       variables:
-#         IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
-#     - if: $CI_COMMIT_TAG
-#       variables:
-#         IMAGE_TAG: $CI_COMMIT_TAG        
-#   script:
-#     - sonar-scanner
-#   allow_failure: true
+sonar-scan-stage:
+  stage: sonar-scan
+  tags:
+#    - docker
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  rules:
+    - if: $CI_COMMIT_REF_NAME == "main"
+      variables:
+        IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"
+    - if: $CI_COMMIT_TAG
+      variables:
+        IMAGE_TAG: $CI_COMMIT_TAG        
+  script:
+    - sonar-scanner
+  allow_failure: true
   
 
 build-wagtail-stage:
