--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 workflow:
-  ## rules:
-  ##   - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  #№# rules:
+  ##№   - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 stages:
   - sonar-scan
