--- a/helmcharts/app-prod-helmChart/values.yaml
+++ b/helmcharts/app-prod-helmChart/values.yaml
@@ -37,9 +37,16 @@ service:
 ingress:
   apiVersion: networking.k8s.io/v1  
   name: main-ingress  
-  secretName: app-tls      
+  secretName: app-tls    
+  sonarqube:
+    host: sonar.prtest.tech          
+    pathType: Prefix
+    path: /              
+    name: sonarqube
+    port: 
+      number: 9000   
   app:
-    host: dev.prtest.tech          
+    host: prtest.tech          
     pathType: Prefix
     path: /              
     name: autoscaling-pod-service
