--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-
 stages:
   - sonar-scan
   - build
@@ -69,10 +68,11 @@ build-wagtail-dev:
         IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev"      
   script:
     - >-
+      declare -i v+=1 \
       /kaniko/executor
       --context "application/mysite"
       --dockerfile "application/mysite/Dockerfile"
-      --destination "gcr.io/internship87task8/wagtail:latest"
+      --destination "gcr.io/internship87task8/wagtail:$v"
 
 deploy-dev:
   stage: deploy
