--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,7 +134,7 @@ build-wagtail-stage:
       /kaniko/executor
       --context "application/mysite"
       --dockerfile "application/mysite/Dockerfile"
-      --destination "gcr.io/internship87task8/wagtail:latest"
+      --destination "gcr.io/internship87task8/wagtail:$IMAGE_TAG"
     
 
 deploy-stage:
@@ -149,7 +149,7 @@ deploy-stage:
         IMAGE_TAG: $CI_COMMIT_TAG 
   script:
     - cd helmcharts
-    - helm upgrade --install app-stage app-stage-helmChart -n stage    
+    - helm upgrade --install --set .Values.containers.app.name=$IMAGE_TAG  app-stage app-stage-helmChart -n stage    
   
 
 
