--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,7 +134,7 @@ build-wagtail-stage:
       /kaniko/executor
       --context "application/mysite"
       --dockerfile "application/mysite/Dockerfile"
-      --destination "gcr.io/internship87task8/wagtail:$IMAGE_TAG"
+      --destination "gcr.io/internship87task8/wagtail:{{ $IMAGE_TAG }}
     
 
 deploy-stage:
