--- a/helmcharts/app-dev-helmChart/values.yaml
+++ b/helmcharts/app-dev-helmChart/values.yaml
@@ -56,7 +56,7 @@ ingress:
 containers:
   app:
     name : app-wagtail
-    image: gcr.io/internship87task8/wagtail:$tag
+    image: gcr.io/internship87task8/wagtail:latest
     ports:
       containerPort: 8000
 
