--- a/helmcharts/app-stage-helmChart/values.yaml
+++ b/helmcharts/app-stage-helmChart/values.yaml
@@ -56,7 +56,7 @@ ingress:
 containers:
   app:
     name : app-wagtail
-    image: gcr.io/internship87task8/wagtail:latest
+    image: gcr.io/internship87task8/wagtail:$IMAGE_TAG
     ports:
       containerPort: 8000
     env:
