--- a/application/mysite/Dockerfile
+++ b/application/mysite/Dockerfile
@@ -14,7 +14,8 @@ EXPOSE 8000
 ENV PYTHONUNBUFFERED=1 \
     PORT=8000 \
     USERNAME=wagtail \
-    PASSWORD=MWYyZDFlMmU2N2Rm
+    PASSWORD=MWYyZDFlMmU2N2Rm \
+    TAG="${tag}"
 
 # Install system packages required by Wagtail and Django.
 RUN apt-get update --yes --quiet && apt-get install --yes --quiet --no-install-recommends \
