--- a/application/mysite/Dockerfile
+++ b/application/mysite/Dockerfile
@@ -15,7 +15,7 @@ ENV PYTHONUNBUFFERED=1 \
     PORT=8000 \
     USERNAME=wagtail \
     PASSWORD=MWYyZDFlMmU2N2Rm \
-    TAG="${port}"
+    PORT="${port}"
 
 # Install system packages required by Wagtail and Django.
 RUN apt-get update --yes --quiet && apt-get install --yes --quiet --no-install-recommends \
