--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ build-wagtail-dev:
       /kaniko/executor
       --context "application/mysite"
       --dockerfile "application/mysite/Dockerfile"
-      --destination "gcr.io/internship87task8/wagtail:$IMAGE_TAG"
+      --destination "gcr.io/internship87task8/wagtail:latest"
 
 deploy-dev:
   stage: deploy
