--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,27 +94,27 @@ health-wagtail-dev:
     - nslookup dev.prtest.tech
     - curl https://dev.prtest.tech
       
-# sonar-scan-stage:
-#   stage: sonar-scan
-#   tags:
-# #    - docker
-#   image:
-#     name: sonarsource/sonar-scanner-cli:latest
-#     entrypoint: [""]
-#   variables:
-#     SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-#     GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-#   cache:
-#     key: "${CI_JOB_NAME}"
-#     paths:
-#       - .sonar/cache
-#   rules:    
-#     - if: $CI_COMMIT_TAG
-#       variables:
-#         IMAGE_TAG: $CI_COMMIT_TAG        
-#   script:
-#     - sonar-scanner
-#   allow_failure: true
+sonar-scan-stage:
+  stage: sonar-scan
+  tags:
+#    - docker
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  rules:    
+    - if: $CI_COMMIT_TAG
+      variables:
+        IMAGE_TAG: $CI_COMMIT_TAG        
+  script:
+    - sonar-scanner
+  allow_failure: true
   
 
 build-wagtail-stage:
