--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,7 +93,7 @@ health-wagtail-dev:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH      
   script:
     - nslookup dev.prtest.tech
-    - curl http://dev.prtest.tech
+    - curl https://dev.prtest.tech
       
 sonar-scan-stage:
   stage: sonar-scan
@@ -166,6 +166,7 @@ health-wagtail-stage:
         IMAGE_TAG: $CI_COMMIT_TAG 
   script:
     - nslookup stage.prtest.tech
+    - curl https://stage.prtest.tech
     
 
 deploy-production:
