--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ deploy-dev:
         IMAGE_TAG: "$CI_COMMIT_SHORT_SHA-dev" 
   script:
     - cd helmcharts
-    - helm upgrade --install app-dev app-dev-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG -n dev    
+    - helm upgrade --install $IMAGE_TAG app-dev-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG -n dev    
 
 health-wagtail-dev:
   stage: test
@@ -150,7 +150,7 @@ deploy-stage:
         IMAGE_TAG: $CI_COMMIT_TAG 
   script:
     - cd helmcharts
-    - helm upgrade --install app-stage app-stage-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG -n stage    
+    - helm upgrade --install $IMAGE_TAG app-stage-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG -n stage    
   
 
 
@@ -181,7 +181,7 @@ deploy-production:
         IMAGE_TAG: $CI_COMMIT_TAG 
   script:
     - cd helmcharts
-    - helm upgrade --install app-production app-prod-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG -n production
+    - helm upgrade --install $IMAGE_TAG app-prod-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG -n production
        
   when: manual
 
