--- a/helmcharts/app-helmChart/values.yaml
+++ b/helmcharts/app-helmChart/values.yaml
@@ -37,9 +37,9 @@ service:
 ingress:
   apiVersion: networking.k8s.io/v1  
   name: main-ingress  
-  secretName: app-tls        
+  secretName: app-tls   
   app:
-    host: stage.prtest.tech          
+    host: dev.prtest.tech          
     pathType: Prefix
     path: /              
     name: autoscaling-pod-service
@@ -53,27 +53,18 @@ containers:
     ports:
       containerPort: 8000
     env:
-    - name: USERNAME
-      valueFrom:
-        secretKeyRef:
-          name: mysecret
-          key: username
-    - name: PASSWORD
-      valueFrom:
-        secretKeyRef:
-           name: mysecret
-           key: password
+        - name: USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: mysecret
+              key: username
+        - name: PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysecret
+              key: password
 
-prod_Clusterissuer:
-  apiVersion: cert-manager.io/v1
-  name: letsencrypt-prod
-  email: yury.market.ma@gmail.com
-  server: https://acme-v02.api.letsencrypt.org/directory
-  privateKeySecretRef:
-    # Secret resource that will be used to store the ACME account's private key.
-    name: letsencrypt-prod-private-key
-      # Add a single challenge solver, HTTP01 using nginx
-  class: nginx
+
 
 
 
