--- a/helmcharts/app-helmChart/templates/deployment.yaml
+++ b/helmcharts/app-helmChart/templates/deployment.yaml
@@ -18,6 +18,12 @@ spec:
           image: {{ .Values.containers.app.image }}
           ports:
             - containerPort: {{ .Values.containers.app.ports.containerPort }}
+          env: 
+            - name: SECRETUSERNAME 
+              valueFrom: 
+                secretKeyRef: 
+                  name: dbsecret
+                  key: username 
 
 ---
 apiVersion: {{ .Values.HPA.apiVersion }}
