--- a/helmcharts/app-helmChart/templates/deployment.yaml
+++ b/helmcharts/app-helmChart/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
             - name: SECRETUSERNAME 
               valueFrom: 
                 secretKeyRef: 
-                  name: dbsecret
+                  name: dbname
                   key: username 
 
 ---
