--- a/application/mysite/Dockerfile
+++ b/application/mysite/Dockerfile
@@ -10,9 +10,9 @@ EXPOSE 8000
 # Set environment variables.
 # 1. Force Python stdout and stderr streams to be unbuffered.
 # 2. Set PORT variable that is used by Gunicorn. This should match "EXPOSE"
-#    command.
+# command.
 ENV PYTHONUNBUFFERED=1 \
-    PORT=8000 \
+    PORT=8000 
   
 # Install system packages required by Wagtail and Django.
 RUN apt-get update --yes --quiet && apt-get install --yes --quiet --no-install-recommends \
