--- a/application/mysite/Dockerfile
+++ b/application/mysite/Dockerfile
@@ -31,8 +31,6 @@ RUN pip install "gunicorn==20.0.4"
 COPY requirements.txt /
 RUN pip install -r /requirements.txt
 
-ARG CI_JOB_NAME=$CI_JOB_NAME
-
 # Use /app folder as a directory where the source code is stored.
 WORKDIR /app
 
@@ -59,4 +57,5 @@ RUN python manage.py collectstatic --noinput --clear
 #   PRACTICE. The database should be migrated manually or using the release
 #   phase facilities of your hosting platform. This is used only so the
 #   Wagtail instance can be started with a simple "docker run" command.
+COPY base.py /mysite/settings/
 CMD set -xe; python manage.py migrate --noinput; gunicorn mysite.wsgi:application
