--- a/application/mysite/Dockerfile
+++ b/application/mysite/Dockerfile
@@ -57,5 +57,5 @@ RUN python manage.py collectstatic --noinput --clear
 #   PRACTICE. The database should be migrated manually or using the release
 #   phase facilities of your hosting platform. This is used only so the
 #   Wagtail instance can be started with a simple "docker run" command.
-COPY base.py /mysite/settings/
+COPY base.py mysite/settings/
 CMD set -xe; python manage.py migrate --noinput; gunicorn mysite.wsgi:application
