--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - deploy
   - test
   - deploy-prod
+  - roll-back
   
 variables:
   PACKAGE_NAME: "awesome-django-app"
@@ -90,10 +91,24 @@ health-wagtail-dev:
   stage: test
   image: wbitt/network-multitool
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH      
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      variables:
+        HEALTH_CHECK=$CI_JOB_STATUS
   script:
     - nslookup dev.prtest.tech:80
     - curl dev.prtest.tech:80
+  allow_failure: true
+
+roll-back-dev:
+  stage: roll-back
+  image: alpine/helm:3.9.1
+  variables: 
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+          $HEALTH_CHECK == failed
+  script:
+    - cd helmcharts
+    - kubectl rollout undo deployment/web-deployment-autoscaling -n dev
       
 sonar-scan-stage:
   stage: sonar-scan  
