--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,8 +102,8 @@ roll-back-dev:
   stage: roll-back
   image: alpine/helm:3.9.1   
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-          #$HEALTH_CHECK == "failed"
+    - if: $HEALTH_CHECK == "failed" # $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+          
   script:
     - cd helmcharts
     - kubectl rollout undo deployment/web-deployment-autoscaling -n dev
