--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,8 +94,8 @@ health-wagtail-dev:
       variables:
         HEALTH_CHECK: "$CI_JOB_STATUS"
   script:
-    - nslookup dev.prtest.tech:80
-    - curl dev.prtest.tech:80
+    - nslookup dev.prtest.tech #:80
+    - curl https://dev.prtest.tech #:80
   allow_failure: true 
 
 roll-back-dev:
