--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -189,7 +189,7 @@ deploy-production:
   when: manual
 
 health-wagtail-stage:
-  stage: test
+  stage: test-prod
   image: wbitt/network-multitool
   rules:    
     - if: $CI_COMMIT_TAG
@@ -198,7 +198,7 @@ health-wagtail-stage:
     - curl https://prtest.tech
 
 roll-back-stage:
-  stage: roll-back
+  stage: roll-back-prod
   image: alpine/helm:3.9.1   
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH        
