--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -170,7 +170,7 @@ roll-back-stage:
   stage: roll-back
   image: alpine/helm:3.9.1   
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH        
+    - if: $CI_COMMIT_TAG       
   script:
     - cd helmcharts
     - helm rollback app-stage -n stage
