--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,7 +96,7 @@ health-wagtail-dev:
       variables:
         HEALTH_CHECK: $CI_JOB_STATUS
   script:
-    - nslookup dev.prtest.tech 
+    - nslookup bug.prtest.tech 
     - curl https://dev.prtest.tech   
 
 roll-back-dev:
@@ -161,7 +161,7 @@ health-wagtail-stage:
   rules:    
     - if: $CI_COMMIT_TAG 
   script:
-    - nslookup stage.prtest.tech
+    - nslookup bug.prtest.tech
     - curl https://stage.prtest.tech
 
 roll-back-stage:
@@ -192,14 +192,14 @@ health-wagtail-stage:
   rules:    
     - if: $CI_COMMIT_TAG
   script:
-    - nslookup prtest.tech
+    - nslookup bug.prtest.tech
     - curl https://prtest.tech
 
-roll-back-stage:
+roll-back-prod:
   stage: roll-back-prod
   image: alpine/helm:3.9.1   
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH        
+    - if: $CI_COMMIT_TAG        
   script:
     - cd helmcharts
     - helm rollback app-prod -n prod
