--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -161,7 +161,7 @@ health-wagtail-stage:
   rules:    
     - if: $CI_COMMIT_TAG 
   script:
-    - nslookup bug.prtest.tech
+    - nslookup stage.prtest.tech
     - curl https://stage.prtest.tech
 
 roll-back-stage:
