--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,18 @@
 stages:
   - sonar-scan
   - build
-  - deploy
   - test
+  - deploy
+  - healthcheck
   - deploy-prod
   - roll-back
   - test-prod
+  - healthcheck-prod
   - roll-back-prod
   
 variables:
   PACKAGE_NAME: "awesome-django-app"
+  DATABASE_NAMESPACE: "postgres-app"
 
 sonar-scan-merge:
   stage: sonar-scan  
@@ -77,6 +80,48 @@ build-wagtail-dev:
       --dockerfile "application/mysite/Dockerfile"
       --destination "gcr.io/internship87task8/wagtail:$IMAGE_TAG"
 
+build-backup:
+  stage: build
+  image:
+    name: gcr.io/kaniko-project/executor:debug
+    entrypoint: [""]
+  script:
+    - >-
+      /kaniko/executor
+      --context "backup"
+      --dockerfile "backup/Dockerfile"
+      --destination "gcr.io/internship87task8/backup:$BACKUP_IMAGE_TAG"
+  rules:
+  - changes:
+    -  backup/**/*
+    - .gitlab-ci.yml
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    variables:
+      BACKUP_IMAGE_TAG: "$CI_MERGE_REQUEST_ID"
+  - if: $CI_COMMIT_TAG
+    variables:
+      BACKUP_IMAGE_TAG: $CI_COMMIT_TAG
+    when: always
+
+lint-backup:
+  stage: test
+  image: alpine/helm:3.9.1
+  script:
+    - cd helmcharts
+    - helm lint backup
+    - helm upgrade --install backup backup -n "$DATABASE_NAMESPACE" --set image.name="gcr.io/internship87task8/backup:$BACKUP_IMAGE_TAG" --dry-run
+  rules:
+    - changes:
+        - helmcharts/backup/**/*
+        - .gitlab-ci.yml
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+      variables:
+        BACKUP_IMAGE_TAG: "$CI_MERGE_REQUEST_ID"
+    - if: $CI_COMMIT_TAG
+      variables:
+        BACKUP_IMAGE_TAG: $CI_COMMIT_TAG
+      when: always
+
 deploy-dev:
   stage: deploy
   image: alpine/helm:3.9.1  
@@ -89,7 +134,7 @@ deploy-dev:
     - helm upgrade --install app-dev app-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG --set ingress.app.host=dev.prtest.tech -n dev    
 
 health-wagtail-dev:
-  stage: test
+  stage: healthcheck
   image: wbitt/network-multitool
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
@@ -155,8 +200,19 @@ deploy-stage:
     - cd helmcharts
     - helm upgrade --install app-stage app-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG --set ingress.app.host=stage.prtest.tech -n stage    
 
+deploy-backup:
+  stage: deploy
+  image: alpine/helm:3.9.1
+  script:
+    - cd helmcharts
+    - helm upgrade --install backup backup -n "$DATABASE_NAMESPACE" --set image.name="gcr.io/internship87task8/backup:$BACKUP_IMAGE_TAG"
+   rules:
+    - if: $CI_COMMIT_TAG
+      variables:
+        BACKUP_IMAGE_TAG: $CI_COMMIT_TAG
+
 health-wagtail-stage:
-  stage: test
+  stage: healthcheck
   image: wbitt/network-multitool
   rules:    
     - if: $CI_COMMIT_TAG 
@@ -186,8 +242,8 @@ deploy-production:
     - helm upgrade --install app-prod app-helmChart --set containers.app.image=gcr.io/internship87task8/wagtail:$IMAGE_TAG --set ingress.app.host=prtest.tech -n prod       
   when: manual
 
-health-wagtail-stage:
-  stage: test-prod
+health-wagtail-prod:
+  stage: healthcheck-prod
   image: wbitt/network-multitool
   rules:    
     - if: $CI_COMMIT_TAG
@@ -195,7 +251,7 @@ health-wagtail-stage:
     - nslookup prtest.tech
     - curl https://prtest.tech
 
-roll-back-stage:
+roll-back-prod:
   stage: roll-back-prod
   image: alpine/helm:3.9.1   
   rules:
