--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ sonar-scan-merge:
     paths:
       - .sonar/cache
   rules:
-    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' 
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
   script:
     - sonar-scanner
   allow_failure: true
@@ -37,7 +37,7 @@ build-wagtail-check:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   rules:
-    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' 
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
   script:
     - >-
       /kaniko/executor
@@ -91,16 +91,15 @@ build-backup:
       --dockerfile "backup/Dockerfile"
       --destination "gcr.io/internship87task8/backup:$BACKUP_IMAGE_TAG"
   rules:
-  - changes:
-    -  backup/**/*
-    - .gitlab-ci.yml
-  - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+  - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
     variables:
       BACKUP_IMAGE_TAG: "$CI_MERGE_REQUEST_ID"
+    changes:
+      - backup/**/*
+      - .gitlab-ci.yml
   - if: $CI_COMMIT_TAG
     variables:
       BACKUP_IMAGE_TAG: $CI_COMMIT_TAG
-    when: always
 
 lint-backup:
   stage: test
@@ -111,16 +110,15 @@ lint-backup:
     - helm lint backup
     - helm upgrade --install backup backup -n "$DATABASE_NAMESPACE" --set image.name="gcr.io/internship87task8/backup:$BACKUP_IMAGE_TAG" --dry-run
   rules:
-    - changes:
-        - helmcharts/backup/**/*
-        - .gitlab-ci.yml
-    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == $CI_DEFAULT_BRANCH
       variables:
         BACKUP_IMAGE_TAG: "$CI_MERGE_REQUEST_ID"
+      changes:
+        - helmcharts/backup/**/*
+        - .gitlab-ci.yml
     - if: $CI_COMMIT_TAG
       variables:
         BACKUP_IMAGE_TAG: $CI_COMMIT_TAG
-      when: always
 
 deploy-dev:
   stage: deploy
