--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -246,7 +246,7 @@ health-wagtail-prod:
   rules:    
     - if: $CI_COMMIT_TAG
   script:
-    - nslookup bug.prtest.tech
+    - nslookup prtest.tech
     - curl https://prtest.tech
   when: on_success
 
